<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Hello World, FuaMain!</string>
    <string name="app_name">FUAAA</string>
    <string name="FUAAA">FUAAA</string>
    <string name="sound_opt">sonido...</string>
    <string name="youtub_opt">ver video...</string>
    <string name="share">comparte...</string>
    <string name="tittle">FUAAA!!!</string>
    <string name="sound_fua3">Fua!!!</string>
    <string name="sound_fua1">Ya no puedo</string>
    <string name="sound_fua2">Caracter!!!</string>
    <string name="sound_fua4">Fua Fua Fua!</string>
    <string name="sound_fua5">FUAAAA!</string>
    <string name="mje">Estoy lanzando un FUAAA!!! de una aplicación #android [ruta]</string>
</resources>
